--- a/index.html
+++ b/index.html
@@ -1003,6 +1003,30 @@
                 </article>
             </div>
         </div>
+        <div class="container py-3 mt-4">
+            <div class="d-flex align-items-center">
+                <!-- Ponto vermelho (Cursos/Aulas) -->
+                <div class="d-flex align-items-center me-4 mr-4">
+                    <span class=""
+                        style="background-color: #dc3545; width: 20px; height: 20px; border-radius: 50%; margin-right: 10px;"></span>
+                    <span class="ms-2">Cursos/Aulas</span>
+                </div>
+
+                <!-- Ponto verde (Workshops) -->
+                <div class="d-flex align-items-center me-4  mr-4">
+                    <span class=""
+                        style="background-color: #28a745; width: 20px; height: 20px; border-radius: 50%;  margin-right: 10px;"></span>
+                    <span class="ms-2">Workshops</span>
+                </div>
+
+                <!-- Ponto azul (Atividades pós parto) -->
+                <div class="d-flex align-items-center  mr-4">
+                    <span class=""
+                        style="background-color: #007bff; width: 20px; height: 20px; border-radius: 50%; margin-right: 10px;"></span>
+                    <span class="ms-2">Atividades pós parto</span>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="testimonials  spad">
@@ -1230,6 +1254,7 @@
 
                 </div>
             </div>
+
         </div>
         <div class="footer__copyright">
             <div class="container">
