--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
     <style>
         b {
-            color: #cfdbab;
+            color: #b1cad4;
             font-weight: 400;
         }
 
@@ -216,7 +216,7 @@
 
     <!-- Blog Details Section Begin -->
     <section class="blog-details spad mt-4">
-        <div class="container mt-8">
+        <div class="container mt-9">
             <div class="blog__details__hero set-bg" data-setbg="img/blog/details/blog-hero.jpg">
                 <!-- <div class="row d-flex justify-content-center">
                     <div class="col-lg-7 text-center">
@@ -291,17 +291,18 @@
 
 
     <!-- Hero Section Begin -->
-    <section class="hero spad set-bg mt-8" style="background-color: #cfdbab; color: ffff; height: 30rem;">
+    <section class="hero spad set-bg mt-8" style="background-color: #b1cad4; color: ffff; height: 30rem;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 mt-2 ml-4">
                     <div class="text-center">
-                        <div class="icone mb-4">
-                            <img src="img/icons/pregnat kids.png" alt="">
+                        <div class="icone">
+                            <img src="img/icons/kids.png" alt="">
                         </div>
 
                         <h2 class="text-white mb-4">Destaque</h2>
-                        <span class="text-white">A nossa visão holística da saúde abrange o seu todo. Sabemos que a
+                        <span class="text-white" style="font-size: 19px;">A nossa visão holística da saúde abrange o seu
+                            todo. Sabemos que a
                             saúde mental é tão ou mais importante que a saúde
                             física. Cuidar dos nossos pacientes e das suas famílias desde a empatia e da disponibilidade
                             para ouvir as suas
@@ -322,11 +323,11 @@
     </section>
     <!-- Hero Section End -->
 
-    <section class="consultation py-3  mt-8">
+    <section class="consultation mt-4">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 d-flex justify-content-center">
-                    <div class="consultation__video set-bg" data-setbg="img/consultation-video.jpg">
+                    <div class="consultation__video set-bg" data-setbg="img/video.jpg">
                         <a href="https://www.youtube.com/watch?v=PXsuI67s2AA" class="play-btn video-popup">
                             <i class="fa fa-play"></i>
                         </a>
@@ -352,7 +353,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
-                    <div class="about__video employer set-bg" data-setbg="img/gallery/gallery-7.jpg">
+                    <div class="about__video employer set-bg" data-setbg="img/doctor/doctor-1.jpg">
                     </div>
                 </div>
             </div>
@@ -366,7 +367,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6">
-                    <div class="about__video employer set-bg" data-setbg="img/gallery/gallery-1.jpg">
+                    <div class="about__video employer set-bg" data-setbg="img/gallery/clinic.jpg">
 
                     </div>
                 </div>
