--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
 
     <!-- Chooseus Section Begin -->
-    <section class="testimonials spad mt-8 pb-4">
+    <section class="testimonials spad mt-7 pb-4">
         <div class="container">
             <!-- Título da Seção -->
             <div class="row">
@@ -362,7 +362,7 @@
             </div>
 
             <!-- Carrossel -->
-            <div id="servicesCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div id="servicesCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2500">
                 <!-- Indicadores -->
                 <!-- <div class="carousel-indicators">
                     <button type="button" data-bs-target="#servicesCarousel" data-bs-slide-to="0" class="active"
