--- a/about.html
+++ b/about.html
@@ -270,7 +270,7 @@
                         </div>
                     </div>
                     <!-- Hero Section Begin -->
-                    <section class="hero spad set-bg mt-4" data-setbg="img/hero-bg.jpg">
+                    <section class="hero spad set-bg mt-4" data-setbg="img/hero-2bg.jpg">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 mt-2 ml-4">
