--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             </div>
 
             <!-- Carrossel -->
-            <div id="servicesCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2900">
+            <div id="servicesCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2990">
                 <!-- Indicadores -->
                 <!-- <div class="carousel-indicators">
                     <button type="button" data-bs-target="#servicesCarousel" data-bs-slide-to="0" class="active"
@@ -544,7 +544,7 @@
     <section class="hero spad set-bg" data-setbg="img/hero-bg.jpg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 mt-5">
+                <div class="col-lg-6 mt-5 ml-5">
                     <div class="hero__text">
                         <!-- <span>Bem-vindo à A Clínica</span> -->
                         <h2>Somos a aldeia <br>da SUA família</h2>
@@ -1155,7 +1155,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-4">
                         <div class="footer__logo">
-                            <a href="#"><span class="logo" style="color: white;">Parto</span></a>
+                            <a href="#"><img src="img/footer-logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-8">
